# training_vrchat_tracking

./: .gitignore  README.md  pyproject.toml
xvr/: cav_client.py  ccav_test.py  control_server.py  gui_test.py  ocv_pose_test.py  osc_client_test.py  osc_server_test.py  plot_test.py  vr_chat_client.py
