[tool.poetry]
name = "xvr"
version = "0.1.0"
description = ""
authors = ["Shuhei Kuno <circular.nine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-osc = "^1.9.0"
mediapipe = "^0.10.18"
opencv-python = "^4.10.0.84"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
